--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -1,14 +1,157 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "error:contract.activation_history:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.activation_history:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.address:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.address:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.contact.type:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.contact.type:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.contact:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.contact:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.extra_data:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.extra_data:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:contract.option:"
 msgid "Coverage %s is inactive at date %s"
 msgstr "La garantie %s est inactive le %s"
 
+msgctxt "error:contract.option:"
+msgid "End date should be anterior to end date of contract: %s"
+msgstr ""
+"La date de fin devrait être antérieure à la date de fin du contrat : %s"
+
+msgctxt "error:contract.option:"
+msgid "End date should be posterior to start date: %s"
+msgstr "La date de fin devrait être postérieure à la date de début : %s"
+
+msgctxt "error:contract.option:"
+msgid "No end date defined"
+msgstr "Pas de date de fin défini"
+
+msgctxt "error:contract.select_start_date:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.select_start_date:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.sub_status:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.sub_status:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:contract:"
 msgid "Activation Periods \"%(first)s\" and \"%(second)s\" overlap."
 msgstr "Les périodes \"%(première)s\" et \"%(seconde)s\" se chevauchent"
+
+msgctxt "error:contract:"
+msgid "Cannot change start date, multiple activation period detected"
+msgstr ""
 
 msgctxt "error:contract:"
 msgid "No quote sequence defined"
@@ -17,6 +160,24 @@ msgstr "Pas de séqunce de dévis définie"
 msgctxt "error:contract:"
 msgid "Product %s is inactive at date %s"
 msgstr "Le produit %s est inactif le %s"
+
+msgctxt "error:party.synthesis.menu.contract:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu.contract:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "field:contract,activation_history:"
 msgid "Activation History"
@@ -86,21 +247,17 @@ msgctxt "field:contract,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract,is_sub_status_required:"
+msgid "Is Sub Status Required"
+msgstr "Sous statut nécessaire"
+
 msgctxt "field:contract,options:"
 msgid "Options"
 msgstr "Garanties"
 
-msgctxt "field:contract,parties:"
-msgid "Parties"
-msgstr "Acteurs"
-
 msgctxt "field:contract,product:"
 msgid "Product"
 msgstr "Produit"
-
-msgctxt "field:contract,product_kind:"
-msgid "Product Kind"
-msgstr "Type de Produit"
 
 msgctxt "field:contract,product_subscriber_kind:"
 msgid "Product Subscriber Kind"
@@ -111,7 +268,7 @@ msgid "Quote Number"
 msgstr "Numéro de devis"
 
 msgctxt "field:contract,rec_name:"
-msgid "Name"
+msgid "Number"
 msgstr "Nom"
 
 msgctxt "field:contract,start_date:"
@@ -125,6 +282,10 @@ msgstr "Date de début de gestion"
 msgctxt "field:contract,status:"
 msgid "Status"
 msgstr "Statut"
+
+msgctxt "field:contract,sub_status:"
+msgid "Details on status"
+msgstr "Détails du statut"
 
 msgctxt "field:contract,subscriber:"
 msgid "Subscriber"
@@ -165,6 +326,10 @@ msgstr "Créé par"
 msgctxt "field:contract.activation_history,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
+
+msgctxt "field:contract.activation_history,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
 
 msgctxt "field:contract.activation_history,id:"
 msgid "ID"
@@ -390,6 +555,10 @@ msgctxt "field:contract.option,appliable_conditions_date:"
 msgid "Appliable Conditions Date"
 msgstr "Date de Conditions"
 
+msgctxt "field:contract.option,automatic_end_date:"
+msgid "Automatic End Date"
+msgstr "Date de fin automatique"
+
 msgctxt "field:contract.option,contract:"
 msgid "Contract"
 msgstr "Contrat"
@@ -398,6 +567,10 @@ msgctxt "field:contract.option,contract_number:"
 msgid "Contract Number"
 msgstr "Numéro de Contrat"
 
+msgctxt "field:contract.option,contract_status:"
+msgid "Contract Status"
+msgstr "Statut de contrat"
+
 msgctxt "field:contract.option,coverage:"
 msgid "Coverage"
 msgstr "Garantie"
@@ -405,10 +578,6 @@ msgstr "Garantie"
 msgctxt "field:contract.option,coverage_family:"
 msgid "Coverage Family"
 msgstr "Famille de garantie"
-
-msgctxt "field:contract.option,coverage_kind:"
-msgid "Coverage Kind"
-msgstr "Type de Garantie"
 
 msgctxt "field:contract.option,create_date:"
 msgid "Create Date"
@@ -446,13 +615,13 @@ msgctxt "field:contract.option,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.option,manual_end_date:"
+msgid "Manual End Date"
+msgstr "Date de fin manuelle"
+
 msgctxt "field:contract.option,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre l'arbre"
-
-msgctxt "field:contract.option,parties:"
-msgid "Parties"
-msgstr "Acteurs"
 
 msgctxt "field:contract.option,product:"
 msgid "Product"
@@ -582,6 +751,50 @@ msgctxt "field:contract.service,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:contract.sub_status,code:"
+msgid "Code"
+msgstr "Code"
+
+msgctxt "field:contract.sub_status,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:contract.sub_status,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:contract.sub_status,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:contract.sub_status,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:contract.sub_status,name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:contract.sub_status,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:contract.sub_status,status:"
+msgid "Status"
+msgstr "Statut"
+
+msgctxt "field:contract.sub_status,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:contract.sub_status,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:contract.sub_status,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer,contract:"
 msgid "Contract"
@@ -594,11 +807,6 @@ msgstr "ID"
 msgctxt "field:contract.wizard.option_subscription.options_displayer,options:"
 msgid "Options"
 msgstr "Options"
-
-msgctxt ""
-"field:contract.wizard.option_subscription.options_displayer.option,childs:"
-msgid "Childs"
-msgstr "Enfants"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,coverage:"
@@ -636,14 +844,22 @@ msgid "Option"
 msgstr "Option"
 
 msgctxt ""
-"field:contract.wizard.option_subscription.options_displayer.option,parent:"
-msgid "Parent"
-msgstr "Parent"
-
-msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,selection:"
 msgid "Selection"
 msgstr "Sélection"
+
+msgctxt "field:contract.wizard.option_subscription.select_package,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:contract.wizard.option_subscription.select_package,package:"
+msgid "Package"
+msgstr "Formule"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package,possible_packages:"
+msgid "Possible Packages"
+msgstr "Formules possibles"
 
 msgctxt "field:offered.configuration,default_quote_number_sequence:"
 msgid "Default quote number sequence"
@@ -690,7 +906,7 @@ msgid "Contracts"
 msgstr "Contrats"
 
 msgctxt "field:party.synthesis.menu.contract,rec_name:"
-msgid "Number"
+msgid "Name"
 msgstr "Numéro"
 
 msgctxt "field:party.synthesis.menu.contract,subscriber:"
@@ -749,6 +965,22 @@ msgctxt "model:contract.service,name:"
 msgid "Contract Service"
 msgstr "Service délivré"
 
+msgctxt "model:contract.sub_status,name:"
+msgid "Contract SubStatus"
+msgstr "Sous statut de contrat"
+
+msgctxt "model:contract.sub_status,name:cooling_off_cancelled"
+msgid "Cancelled by customer"
+msgstr "Renonciation"
+
+msgctxt "model:contract.sub_status,name:sub_status_never_enforced"
+msgid "Error"
+msgstr "Erreur"
+
+msgctxt "model:contract.sub_status,name:sub_status_reached_end_date"
+msgid "Reached end date"
+msgstr "Terme atteint"
+
 msgctxt "model:contract.wizard.option_subscription.options_displayer,name:"
 msgid "Select Covered Element"
 msgstr "Choisir Le Risque Couvert"
@@ -757,6 +989,10 @@ msgctxt ""
 "model:contract.wizard.option_subscription.options_displayer.option,name:"
 msgid "Option"
 msgstr "Option"
+
+msgctxt "model:contract.wizard.option_subscription.select_package,name:"
+msgid "Select Package"
+msgstr "Choisir la formule"
 
 msgctxt "model:ir.action,name:"
 msgid "Devis"
@@ -786,6 +1022,10 @@ msgctxt "model:ir.action,name:act_quote_button"
 msgid "Contracts"
 msgstr "Contrats"
 
+msgctxt "model:ir.action,name:act_sub_status_form"
+msgid "Sub-status"
+msgstr "Sous statut"
+
 msgctxt "model:ir.action,name:option_subscription_wizard"
 msgid "Option Subscription"
 msgstr "Souscription d'Option"
@@ -801,6 +1041,11 @@ msgstr "Actif"
 msgctxt "model:ir.action.act_window.domain,name:act_contract_domain_quote"
 msgid "Quote"
 msgstr "Devis"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:act_contract_domain_terminated"
+msgid "Terminated"
+msgstr "Terminé"
 
 msgctxt "model:ir.sequence.type,name:sequence_type_quote"
 msgid "Quote"
@@ -825,6 +1070,10 @@ msgstr "Traitement"
 msgctxt "model:ir.ui.menu,name:menu_contract_form"
 msgid "Contracts"
 msgstr "Contrats"
+
+msgctxt "model:ir.ui.menu,name:sub_status_form"
+msgid "Sub-status"
+msgstr "Sous statut"
 
 msgctxt "model:party.synthesis.menu.contract,name:"
 msgid "Party Synthesis Menu Contract"
@@ -870,6 +1119,10 @@ msgctxt "selection:contract,status:"
 msgid "Terminated"
 msgstr "Terminé"
 
+msgctxt "selection:contract,status:"
+msgid "Void"
+msgstr "Sans Effet"
+
 msgctxt "selection:contract,subscriber_kind:"
 msgid "Company"
 msgstr "Société"
@@ -902,6 +1155,10 @@ msgctxt "selection:contract.option,status:"
 msgid "Terminated"
 msgstr "Terminé"
 
+msgctxt "selection:contract.option,status:"
+msgid "Void"
+msgstr "Sans Effet"
+
 msgctxt "selection:contract.service,status:"
 msgid "Calculated"
 msgstr "Calculé"
@@ -917,6 +1174,30 @@ msgstr "Delivré"
 msgctxt "selection:contract.service,status:"
 msgid "Not Eligible"
 msgstr "Non Eligible"
+
+msgctxt "selection:contract.sub_status,status:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:contract.sub_status,status:"
+msgid "Active"
+msgstr "Active"
+
+msgctxt "selection:contract.sub_status,status:"
+msgid "Hold"
+msgstr "Suspendre"
+
+msgctxt "selection:contract.sub_status,status:"
+msgid "Quote"
+msgstr "Devis"
+
+msgctxt "selection:contract.sub_status,status:"
+msgid "Terminated"
+msgstr "Terminé"
+
+msgctxt "selection:contract.sub_status,status:"
+msgid "Void"
+msgstr "Sans Effet"
 
 msgctxt ""
 "selection:contract.wizard.option_subscription.options_displayer.option,coverage_behaviour:"
@@ -996,6 +1277,10 @@ msgctxt "view:contract.service:"
 msgid "Contract Service"
 msgstr "Prestation Fournie"
 
+msgctxt "view:contract.sub_status:"
+msgid "Substatus"
+msgstr "Sous statut"
+
 msgctxt "view:contract.wizard.option_subscription.options_displayer.option:"
 msgid "Option"
 msgstr "Option"
@@ -1003,6 +1288,10 @@ msgstr "Option"
 msgctxt "view:contract.wizard.option_subscription.options_displayer:"
 msgid "Options"
 msgstr "Options"
+
+msgctxt "view:contract.wizard.option_subscription.select_package:"
+msgid "Select Package"
+msgstr "Choisir la formule"
 
 msgctxt "view:contract:"
 msgid "Administration"
