--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -2,6 +2,42 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:contract.covered_element-party:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.covered_element-party:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.covered_element:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.covered_element:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:contract.manage_exclusion:"
 msgid "At least one exclusion must be selected"
 msgstr "Au moins une exclusion doit être sélectionnée"
@@ -18,6 +54,42 @@ msgctxt "error:contract.manage_extra_premium:"
 msgid "There may be only one coverage selected for this action"
 msgstr "Une seule garantie doit être sélectionnée pour continuer"
 
+msgctxt "error:contract.option-exclusion.kind:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.option-exclusion.kind:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.option.extra_premium:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.option.extra_premium:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:contract.option.extra_premium:"
 msgid ""
 "Extra premium %s start date (%s) should be greater than the coverage's (%s)"
@@ -25,21 +97,95 @@ msgstr ""
 "Sur la surprime %s, la date de début (%s) doit être postérieure à celle de "
 "la garantie (%s)"
 
+msgctxt "error:contract.option:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.option:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.service:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.service:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract:"
+msgid ""
+"Cannot add functional key : both quotenumber and contract_number are missing"
+" from values"
+msgstr ""
+
+msgctxt "error:contract:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract:"
+msgid "Invalid file format"
+msgstr "Format de fichier non valide"
+
+msgctxt "error:expense:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:expense:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "field:contract,addresses:"
 msgid "Addresses"
 msgstr "Adresses"
 
-msgctxt "field:contract,agreements:"
-msgid "Contract-Agreement Relations"
-msgstr "Géré par"
-
 msgctxt "field:contract,contract_number:"
 msgid "Contract Number"
 msgstr "Numéro de Contrat"
-
-msgctxt "field:contract,contracts:"
-msgid "Managing Roles"
-msgstr "Gérant les Contrats"
 
 msgctxt "field:contract,covered_elements:"
 msgid "Covered Elements"
@@ -65,13 +211,13 @@ msgctxt "field:contract,current_policy_owner:"
 msgid "Current Policy Owner"
 msgstr "Responsable Courant de la Police"
 
-msgctxt "field:contract,documents:"
-msgid "Documents"
-msgstr "Documents"
-
 msgctxt "field:contract,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
+
+msgctxt "field:contract,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
 
 msgctxt "field:contract,id:"
 msgid "ID"
@@ -124,66 +270,6 @@ msgstr "Date de mise à jour"
 msgctxt "field:contract,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
-
-msgctxt "field:contract-agreement,agency:"
-msgid "Agency"
-msgstr "Agence"
-
-msgctxt "field:contract-agreement,contract:"
-msgid "Contract"
-msgstr "Contrat"
-
-msgctxt "field:contract-agreement,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:contract-agreement,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
-
-msgctxt "field:contract-agreement,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:contract-agreement,end_date:"
-msgid "End Date"
-msgstr "Date de Fin"
-
-msgctxt "field:contract-agreement,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:contract-agreement,kind:"
-msgid "Kind"
-msgstr "Type"
-
-msgctxt "field:contract-agreement,party:"
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:contract-agreement,protocol:"
-msgid "Protocol"
-msgstr "Protocole de gestion"
-
-msgctxt "field:contract-agreement,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:contract-agreement,start_date:"
-msgid "Start Date"
-msgstr "Date de Début"
-
-msgctxt "field:contract-agreement,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:contract-agreement,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:contract-agreement,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
 
 msgctxt "field:contract.address,address:"
 msgid "Address"
@@ -321,13 +407,13 @@ msgctxt "field:contract.covered_element,parent:"
 msgid "Parent"
 msgstr "Parent"
 
-msgctxt "field:contract.covered_element,parties:"
-msgid "Parties"
-msgstr "Acteurs"
-
 msgctxt "field:contract.covered_element,party:"
 msgid "Actor"
 msgstr "Acteur"
+
+msgctxt "field:contract.covered_element,party_code:"
+msgid "Party Code"
+msgstr "Code de l'acteur"
 
 msgctxt "field:contract.covered_element,party_extra_data:"
 msgid "Party Extra Data"
@@ -540,6 +626,10 @@ msgstr "Augmentations"
 msgctxt "field:contract.option,extra_premiums:"
 msgid "Extra Premiums"
 msgstr "Surprimes"
+
+msgctxt "field:contract.option,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
 
 msgctxt "field:contract.option,icon:"
 msgid "Icon"
@@ -790,10 +880,6 @@ msgctxt ""
 msgid "Covered Elements"
 msgstr "Risques Couverts"
 
-msgctxt "field:document.receive.request,tmp_0:"
-msgid "Contract"
-msgstr "Contrat"
-
 msgctxt "field:expense,amount:"
 msgid "Amount"
 msgstr "Montant"
@@ -861,10 +947,6 @@ msgstr "Données Complémentaires"
 msgctxt "model:contract,name:"
 msgid "Contract"
 msgstr "Contrat"
-
-msgctxt "model:contract-agreement,name:"
-msgid "Contract-Agreement Relation"
-msgstr "Gestionnaire"
 
 msgctxt "model:contract.address,name:"
 msgid "Contract Address"
@@ -986,10 +1068,6 @@ msgctxt "selection:contract,status:"
 msgid "Terminated"
 msgstr "Terminé"
 
-msgctxt "selection:contract-agreement,kind:"
-msgid ""
-msgstr " "
-
 msgctxt "selection:contract.manage_extra_premium.select,kind:"
 msgid "Contract"
 msgstr "Contrat"
@@ -1050,37 +1128,9 @@ msgctxt "selection:contract.service,status:"
 msgid "Not Eligible"
 msgstr "Non Eligible"
 
-msgctxt "selection:document.receive.request,kind:"
-msgid "Contract"
-msgstr "Contrat"
-
-msgctxt "selection:document.request,needed_by:"
-msgid "Contract"
-msgstr "Contrat"
-
-msgctxt "selection:document.request.line,for_object:"
-msgid "Contract"
-msgstr "Contrat"
-
-msgctxt "selection:document.request.line,for_object:"
-msgid "Covered Element"
-msgstr "Risque Couvert"
-
-msgctxt "selection:document.request.line,for_object:"
-msgid "Option"
-msgstr "Garantie"
-
 msgctxt "selection:document.template,kind:"
 msgid "Contract Documents"
 msgstr "Documents du contrat"
-
-msgctxt "view:contract-agreement:"
-msgid "Management"
-msgstr "Gestionnaire"
-
-msgctxt "view:contract-agreement:"
-msgid "Manager"
-msgstr "Géré par"
 
 msgctxt "view:contract.address:"
 msgid "Contract Address"
@@ -1240,3 +1290,13 @@ msgstr "Annuler"
 msgctxt "wizard_button:contract.renew,renewal_start,renewal_result:"
 msgid "Start"
 msgstr "Commencer"
+
+msgctxt ""
+"wizard_button:contract.wizard.option_subscription,select_package,end:"
+msgid "Cancel"
+msgstr "Annuler"
+
+msgctxt ""
+"wizard_button:contract.wizard.option_subscription,select_package,options_displayer:"
+msgid "Next"
+msgstr "Suivant"
