--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -1,6 +1,78 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "error:account.fee.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.fee.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:account.invoice.line.detail:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.invoice.line.detail:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:account.invoice.payment_term.line:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.invoice.payment_term.line:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:account.invoice.payment_term:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.invoice.payment_term:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:account.payment.creation:"
 msgid "No Batch Path Specified"
@@ -9,6 +81,42 @@ msgstr "Le chemin d'exécution des batchs n'est pas configuré"
 msgctxt "error:account.payment.treatment:"
 msgid "No Batch Path Specified"
 msgstr "Le chemin d'exécution des batchs n'est pas configuré"
+
+msgctxt "error:account.tax.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.tax.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.billing_information:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.billing_information:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:contract.invoice.create:"
 msgid "No Batch Path Specified"
@@ -22,9 +130,117 @@ msgctxt "error:contract.premium.display:"
 msgid "No contract found in context"
 msgstr "Pas de contrat trouver dans le contexte"
 
+msgctxt "error:contract.premium:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.premium:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.billing.mode-account.invoice.payment_term:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.billing.mode-account.invoice.payment_term:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.billing_mode:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.billing_mode:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:offered.billing_mode:"
 msgid "The code must be unique"
 msgstr "Le code doit être unique"
+
+msgctxt "error:offered.product-offered.billing_mode:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.product-offered.billing_mode:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu.invoice:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu.invoice:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "field:account.fee.description,account_for_billing:"
 msgid "Account for billing"
@@ -69,6 +285,102 @@ msgstr "Date d'Effet"
 msgctxt "field:account.invoice.line,currency_symbol:"
 msgid "Currency Symbol"
 msgstr "Symbole de la Devise"
+
+msgctxt "field:account.invoice.line,detail:"
+msgid "Detail"
+msgstr "Détail"
+
+msgctxt "field:account.invoice.line,details:"
+msgid "Details"
+msgstr "Détails"
+
+msgctxt "field:account.invoice.line.detail,contract:"
+msgid "Contract"
+msgstr "Contrat"
+
+msgctxt "field:account.invoice.line.detail,coverage:"
+msgid "Coverage"
+msgstr "Offre"
+
+msgctxt "field:account.invoice.line.detail,covered_element:"
+msgid "Covered Element"
+msgstr "Risque Couvert"
+
+msgctxt "field:account.invoice.line.detail,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:account.invoice.line.detail,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:account.invoice.line.detail,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:account.invoice.line.detail,extra_premium:"
+msgid "Extra Premium"
+msgstr "Surprime"
+
+msgctxt "field:account.invoice.line.detail,fee:"
+msgid "Fee"
+msgstr "Frais"
+
+msgctxt "field:account.invoice.line.detail,frequency:"
+msgid "Frequency"
+msgstr "Fréquence"
+
+msgctxt "field:account.invoice.line.detail,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:account.invoice.line.detail,invoice_line:"
+msgid "Invoice Line"
+msgstr "Ligne de quittance"
+
+msgctxt "field:account.invoice.line.detail,option:"
+msgid "Option"
+msgstr "Option"
+
+msgctxt "field:account.invoice.line.detail,parent:"
+msgid "Parent Entity"
+msgstr "Entité parente"
+
+msgctxt "field:account.invoice.line.detail,premium:"
+msgid "Premium"
+msgstr "Prime"
+
+msgctxt "field:account.invoice.line.detail,product:"
+msgid "Product"
+msgstr "Produit"
+
+msgctxt "field:account.invoice.line.detail,rate:"
+msgid "Rate"
+msgstr "Taux"
+
+msgctxt "field:account.invoice.line.detail,rated_entity:"
+msgid "Rated Entity"
+msgstr "Elément tarifé"
+
+msgctxt "field:account.invoice.line.detail,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:account.invoice.line.detail,taxes:"
+msgid "Taxes"
+msgstr "Taxes"
+
+msgctxt "field:account.invoice.line.detail,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:account.invoice.line.detail,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:account.invoice.line.detail,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:account.invoice.payment_term,xml_id:"
 msgid "XML Id"
@@ -298,6 +610,10 @@ msgctxt "field:contract.premium,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
 
+msgctxt "field:contract.premium,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
 msgctxt "field:contract.premium,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -357,6 +673,10 @@ msgstr "Date de mise à jour"
 msgctxt "field:contract.premium,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
+
+msgctxt "field:contract.premium,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:contract.premium-account.tax,create_date:"
 msgid "Create Date"
@@ -658,6 +978,10 @@ msgstr ""
 "Une liste de nombres séparés par des virgules correspondant aux jours disponibles pour le prélèvement.\n"
 "Une liste vide signifie que tous les jours sont autorisés."
 
+msgctxt "model:account.invoice.line.detail,name:"
+msgid "Invoie Line Detail"
+msgstr "Détail de ligne de quittance"
+
 msgctxt "model:account.payment.creation,name:"
 msgid "Payment Creation Batch"
 msgstr "Batch de création des paiements"
@@ -759,25 +1083,37 @@ msgctxt "model:party.synthesis.menu.invoice,name:"
 msgid "Party Synthesis Menu Invoice"
 msgstr "Synthèse quittance"
 
-msgctxt "selection:contract.invoice,invoice_state:"
-msgid "Canceled"
-msgstr "Annulé"
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Half-yearly"
+msgstr "Semestriel"
 
-msgctxt "selection:contract.invoice,invoice_state:"
-msgid "Draft"
-msgstr "Brouillon"
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Monthly"
+msgstr "Mensuel"
 
-msgctxt "selection:contract.invoice,invoice_state:"
-msgid "Paid"
-msgstr "Payée"
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Once Per Contract"
+msgstr "Une fois par contrat"
 
-msgctxt "selection:contract.invoice,invoice_state:"
-msgid "Posted"
-msgstr "Emise"
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Once per Invoice"
+msgstr "Une fois par quittance"
 
-msgctxt "selection:contract.invoice,invoice_state:"
-msgid "Validated"
-msgstr "Validé"
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Quarterly"
+msgstr "Trimestriel"
+
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Yearly"
+msgstr "Annuel"
+
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Yearly (360 days)"
+msgstr "Annuel (360 jours)"
+
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Yearly (365 days)"
+msgstr "Annuel (365 jours)"
 
 msgctxt "selection:contract.premium,frequency:"
 msgid "Half-yearly"
@@ -882,6 +1218,14 @@ msgstr "Octobre"
 msgctxt "selection:offered.billing_mode,sync_month:"
 msgid "September"
 msgstr "Septembre"
+
+msgctxt "view:account.invoice.line.detail:"
+msgid "Invoice Line Detail"
+msgstr "Détail de ligne de quittance"
+
+msgctxt "view:account.invoice.line.detail:"
+msgid "Invoice Line Details"
+msgstr "Détails de ligne de quittance"
 
 msgctxt "view:account.invoice.line:"
 msgid "General"
