--- a/modules/endorsement/locale/fr_FR.po
+++ b/modules/endorsement/locale/fr_FR.po
@@ -2,6 +2,42 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:endorsement.contract.activation_history.field:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.contract.activation_history.field:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:endorsement.contract.activation_history:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.contract.activation_history:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:endorsement.contract.activation_history:"
 msgid "New version"
 msgstr "Nouvelle version"
@@ -14,9 +50,63 @@ msgctxt "error:endorsement.contract.activation_history:"
 msgid "Update %s"
 msgstr "Mise à jour de %s"
 
+msgctxt "error:endorsement.contract.field:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.contract.field:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:endorsement.contract.open:"
 msgid "Endorsement is not yet applied"
 msgstr "L'avenant n'est pas encore appliqué"
+
+msgctxt "error:endorsement.contract.option.field:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.contract.option.field:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:endorsement.contract.option:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.contract.option:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:endorsement.contract.option:"
 msgid "New Coverage: %s"
@@ -49,11 +139,77 @@ msgstr ""
 "Il ne peut y avoir qu'un seul avenant en cours de saisie sur un contrat "
 "donné."
 
+msgctxt "error:endorsement.definition-endorsement.part:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.definition-endorsement.part:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:endorsement.definition-product:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.definition-product:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:endorsement.part-method:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:endorsement.part-method:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:endorsement.start:"
 msgid "Cannot start full contract revision, no matching process available"
 msgstr ""
 "Impossible de démarrer la reprise intégrale de contrat, un processus est "
 "déjà en cours."
+
+msgctxt "error:endorsement.start:"
+msgid "It is not possible to resume an already applied endorsement"
+msgstr "Il est impossible de reprendre un avenant déjà appliqué"
+
+msgctxt "error:endorsement.start:"
+msgid "You cannot start an endorsement on a non-active contract !"
+msgstr "Vous ne pouvez démarrer un avenant sur un contrat non actif!"
+
+msgctxt "field:contract,latest_endorsement:"
+msgid "Last Endorsement"
+msgstr "Dernier avenant"
 
 msgctxt "field:endorsement,applicant:"
 msgid "Applicant"
@@ -1002,6 +1158,10 @@ msgstr "Option"
 msgctxt "selection:process,kind:"
 msgid "Full Contract Revision"
 msgstr "Reprise intégrale de contrat"
+
+msgctxt "view:contract:"
+msgid "Start Endorsement"
+msgstr "Nouvel Avenant"
 
 msgctxt "view:endorsement.contract.activation_history.field:"
 msgid "Endorsement Field"
