--- a/modules/offered/locale/fr_FR.po
+++ b/modules/offered/locale/fr_FR.po
@@ -2,6 +2,42 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:extra_data-sub_extra_data:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:extra_data-sub_extra_data:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:extra_data:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:extra_data:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:extra_data:"
 msgid "Expected key %s to be set in field %s of %s"
 msgstr ""
@@ -14,9 +50,175 @@ msgctxt "error:extra_data:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
+msgctxt "error:offered.option.description-extra_data:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.option.description-extra_data:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.option.description.excluded:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.option.description.excluded:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.option.description.required:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.option.description.required:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.option.description.rule:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.option.description.rule:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:offered.option.description:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
+
+msgctxt "error:offered.package-option.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.package-option.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.package:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.package:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.package:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
+msgctxt "error:offered.product-extra_data:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.product-extra_data:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.product-option.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.product-option.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:offered.product-package:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:offered.product-package:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:offered.product:"
 msgid "The code must be unique!"
@@ -272,10 +474,6 @@ msgctxt "field:offered.option.description,company:"
 msgid "Company"
 msgstr "Société"
 
-msgctxt "field:offered.option.description,coverages_in_package:"
-msgid "OptionDescriptions In Package"
-msgstr "Options de la Formule"
-
 msgctxt "field:offered.option.description,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -320,17 +518,9 @@ msgctxt "field:offered.option.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.option.description,is_package:"
-msgid "Package"
-msgstr "Formule"
-
 msgctxt "field:offered.option.description,is_service:"
 msgid "Is a Service"
 msgstr "Est un service"
-
-msgctxt "field:offered.option.description,kind:"
-msgid "Option Description Kind"
-msgstr "Type de Garantie"
 
 msgctxt "field:offered.option.description,name:"
 msgid "Name"
@@ -564,9 +754,49 @@ msgctxt "field:offered.option.description.rule,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:offered.package-option.description,coverage:"
-msgid "OptionDescription"
-msgstr "Description d'Option"
+msgctxt "field:offered.package,code:"
+msgid "Code"
+msgstr "Code"
+
+msgctxt "field:offered.package,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.package,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.package,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:offered.package,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:offered.package,name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:offered.package,options:"
+msgid "Options"
+msgstr "Options"
+
+msgctxt "field:offered.package,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:offered.package,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:offered.package,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:offered.package,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:offered.package-option.description,create_date:"
 msgid "Create Date"
@@ -583,6 +813,10 @@ msgstr "Créé par"
 msgctxt "field:offered.package-option.description,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:offered.package-option.description,option:"
+msgid "Option"
+msgstr "Option"
 
 msgctxt "field:offered.package-option.description,package:"
 msgid "Package"
@@ -663,10 +897,6 @@ msgstr "Données Complémentaires"
 msgctxt "field:offered.product,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:offered.product,kind:"
-msgid "Product Kind"
-msgstr "Type de Produit"
 
 msgctxt "field:offered.product,name:"
 msgid "Name"
@@ -804,6 +1034,46 @@ msgctxt "field:offered.product-option.description,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:offered.product-package,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.product-package,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.product-package,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:offered.product-package,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:offered.product-package,package:"
+msgid "Package"
+msgstr "Formule"
+
+msgctxt "field:offered.product-package,product:"
+msgid "Product"
+msgstr "Produit"
+
+msgctxt "field:offered.product-package,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:offered.product-package,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:offered.product-package,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:offered.product-package,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
@@ -820,6 +1090,10 @@ msgctxt "model:extra_data-sub_extra_data,name:"
 msgid "Extra Data to Sub Extra Data Relation"
 msgstr "Données Complémentaires Récursives"
 
+msgctxt "model:ir.action,name:"
+msgid "Packages"
+msgstr "Formules"
+
 msgctxt "model:ir.action,name:act_configuration_form"
 msgid "Offered Configuration"
 msgstr "Administration produit"
@@ -832,9 +1106,9 @@ msgctxt "model:ir.action,name:act_model_extra_data"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
 
-msgctxt "model:ir.action,name:act_package_form"
-msgid "Packages"
-msgstr "Formules"
+msgctxt "model:ir.action,name:act_package"
+msgid "Package"
+msgstr "Formule"
 
 msgctxt "model:ir.action,name:act_product_form"
 msgid "Products"
@@ -861,7 +1135,7 @@ msgid "Extra Data"
 msgstr "Données Complémentaires"
 
 msgctxt "model:ir.ui.menu,name:menu_package_form"
-msgid "Packages"
+msgid "Formules"
 msgstr "Formules"
 
 msgctxt "model:ir.ui.menu,name:menu_product"
@@ -904,8 +1178,12 @@ msgctxt "model:offered.option.description.rule,name:"
 msgid "Option Description Rule"
 msgstr "Règles d'une garantie"
 
+msgctxt "model:offered.package,name:"
+msgid "Package"
+msgstr "Formule"
+
 msgctxt "model:offered.package-option.description,name:"
-msgid "Package to Option Description Relation"
+msgid "Package - Option Description Relation"
 msgstr "Relation Formules - Description d'Option"
 
 msgctxt "model:offered.product,name:"
@@ -920,6 +1198,10 @@ msgctxt "model:offered.product-option.description,name:"
 msgid "Product to Option Description Relation"
 msgstr "Relation Produit - Description d'Option"
 
+msgctxt "model:offered.product-package,name:"
+msgid "Product - Package Relation"
+msgstr "Relation Produit - Formule"
+
 msgctxt "model:res.group,name:group_offered"
 msgid "Offered"
 msgstr "Offre"
@@ -927,6 +1209,10 @@ msgstr "Offre"
 msgctxt "model:res.group,name:group_offered_admin"
 msgid "Offered Administration"
 msgstr "Administration produit"
+
+msgctxt "selection:extra_data,kind:"
+msgid ""
+msgstr " "
 
 msgctxt "selection:extra_data,kind:"
 msgid "Benefit"
@@ -959,6 +1245,10 @@ msgstr "Avancé"
 msgctxt "selection:extra_data,sub_data_config_kind:"
 msgid "Simple"
 msgstr "Simple"
+
+msgctxt "selection:extra_data,type_:"
+msgid ""
+msgstr " "
 
 msgctxt "selection:extra_data,type_:"
 msgid "Boolean"
@@ -1004,10 +1294,6 @@ msgctxt "selection:offered,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:offered.option.description,kind:"
-msgid ""
-msgstr " "
-
 msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Defaulted"
 msgstr "Proposée par Défaut"
@@ -1039,10 +1325,6 @@ msgstr " "
 msgctxt "selection:offered.option.description.rule,kind:"
 msgid "Ending"
 msgstr "Résiliation"
-
-msgctxt "selection:offered.product,kind:"
-msgid ""
-msgstr " "
 
 msgctxt "selection:offered.product,subscriber_kind:"
 msgid "All"
@@ -1105,12 +1387,16 @@ msgid "Extra Data"
 msgstr "Données Complémentaires"
 
 msgctxt "view:offered.option.description:"
-msgid "Option Descriptions"
-msgstr "Descriptions d'Options"
-
-msgctxt "view:offered.option.description:"
 msgid "Subscription"
 msgstr "Souscription"
+
+msgctxt "view:offered.package:"
+msgid "Package"
+msgstr "Formule"
+
+msgctxt "view:offered.package:"
+msgid "Packages"
+msgstr "Formules"
 
 msgctxt "view:offered.product-option.description:"
 msgid "Product Option Description Relation"
