--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -2,21 +2,148 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:contract-loan:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract-loan:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract:"
+msgid "Loan %s must be calculated before proceeding"
+msgstr ""
+"La table d'amortissement du prêt %s doit être calculé avant de continuer"
+
+msgctxt "error:contract:"
+msgid "There must be at least one loan :"
+msgstr "Il doit y avoir au moins un prêt :"
+
+msgctxt "error:loan.increment:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:loan.increment:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:loan.payment:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:loan.payment:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:loan.share:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:loan.share:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:loan:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:loan:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:loan:"
 msgid "No loan sequence defined"
 msgstr "Pas de séquence de prêt définie"
 
+msgctxt "error:party.display_insured_outstanding_loan_balance.select_date:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:party.display_insured_outstanding_loan_balance.select_date:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu.loan:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:party.synthesis.menu.loan:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "field:billing.premium.date_configuration,every_loan_payment:"
 msgid "Calculate each payment"
 msgstr "Calculer chaque paiement"
-
-msgctxt "field:contract,doc_received:"
-msgid "All Document Received"
-msgstr "Documents Reçus"
-
-msgctxt "field:contract,documents:"
-msgid "Documents"
-msgstr "Documents"
 
 msgctxt "field:contract,is_loan:"
 msgid "Is Loan"
@@ -29,6 +156,14 @@ msgstr "Prêts"
 msgctxt "field:contract,multi_mixed_view:"
 msgid "Covered Elements"
 msgstr "Risques Couverts"
+
+msgctxt "field:contract,ordered_loans:"
+msgid "Ordered Loans"
+msgstr "Prêts ordonnés"
+
+msgctxt "field:contract,show_ordered_loans:"
+msgid "Show Ordered Loans"
+msgstr "Afficher les prêts ordonnés"
 
 msgctxt "field:contract,used_loans:"
 msgid "Used Loans"
@@ -109,6 +244,11 @@ msgid "Loan"
 msgstr "Prêt"
 
 msgctxt ""
+"field:contract.wizard.option_subscription.options_displayer.option,order:"
+msgid "Order"
+msgstr "Ordre"
+
+msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,share:"
 msgid "Loan Share"
 msgstr "Quotité"
@@ -177,6 +317,14 @@ msgctxt "field:loan,increments:"
 msgid "Increments"
 msgstr "Paliers"
 
+msgctxt "field:loan,insured_persons:"
+msgid "Insured Persons"
+msgstr "Personnes assurées"
+
+msgctxt "field:loan,insured_persons_name:"
+msgid "Insured Persons"
+msgstr "Personnes assurées"
+
 msgctxt "field:loan,kind:"
 msgid "Kind"
 msgstr "Type"
@@ -200,10 +348,6 @@ msgstr "Ordre"
 msgctxt "field:loan,outstanding_balance:"
 msgid "Outstanding Balance"
 msgstr "Capital restant dû"
-
-msgctxt "field:loan,parties:"
-msgid "Parties"
-msgstr "Acteur"
 
 msgctxt "field:loan,payment_frequency:"
 msgid "Payment Frequency"
@@ -234,46 +378,6 @@ msgid "Write User"
 msgstr "Mis à jour par"
 
 msgctxt "field:loan,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
-
-msgctxt "field:loan-party,create_date:"
-msgid "Create Date"
-msgstr "Date de Création"
-
-msgctxt "field:loan-party,create_date_:"
-msgid "Creation date"
-msgstr "Date de Création"
-
-msgctxt "field:loan-party,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:loan-party,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:loan-party,loan:"
-msgid "Loan"
-msgstr "Prêt"
-
-msgctxt "field:loan-party,party:"
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:loan-party,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:loan-party,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:loan-party,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:loan-party,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
@@ -677,6 +781,10 @@ msgctxt "model:ir.action,name:act_loan_payment_relate_form"
 msgid "Loan Payments"
 msgstr "Echéances"
 
+msgctxt "model:ir.action,name:act_loan_relate_form"
+msgid "Loans"
+msgstr "Prêts"
+
 msgctxt "model:ir.sequence.type,name:sequence_type_loan"
 msgid "Loan"
 msgstr "Prêt"
@@ -688,10 +796,6 @@ msgstr "Prêts"
 msgctxt "model:loan,name:"
 msgid "Loan"
 msgstr "Prêt"
-
-msgctxt "model:loan-party,name:"
-msgid "Loan Party relation"
-msgstr ""
 
 msgctxt "model:loan.increment,name:"
 msgid "Loan Increment"
@@ -829,6 +933,10 @@ msgstr "Emprunteur"
 msgctxt "view:contract-loan:"
 msgid "Contract Loan"
 msgstr "Prêt du contrat"
+
+msgctxt "view:contract-loan:"
+msgid "Loan"
+msgstr "Prêt"
 
 msgctxt "view:contract.option.extra_premium:"
 msgid "‰"
